--- a/src/main/resources/logging.properties
+++ b/src/main/resources/logging.properties
@@ -1,7 +1,7 @@
 # RootLogger 顶级父元素指定的默认处理器为：ConsoleHandler
 handlers=java.util.logging.ConsoleHandler,java.util.logging.FileHandler
 # RootLogger 顶级父元素默认的日志级别为：ALL
-.level=ALL
+.level=DEBUG
 org.apache.http.level=OFF
 # 关闭默认配置
 # 向日志文件输出的 handler 对象
